<resources>
    <string name="app_name">AirQuality</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Air Quality</string>
    <string name="nav_header_subtitle">Air Quality monitoring in the parking area of Pt. SPV</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_sensor">Sensor</string>
    <string name="menu_about">About</string>
    <string name="item_icon">Item Icon</string>
    <string name="item_description">Item Description</string>
    <string name="item_name">Item Name</string>
    <string name="sensor_description">Sensor Description</string>
    <string name="sensor_name">Sensor Name</string>
    <string name="bio_about">Bio.</string>
    <string name="job_about">Position</string>
    <string name="profile_image_desc">Profile Picture</string>
    <string name="name_about">Name</string>
    <string name="projects_about">Projects Created</string>
    <string name="skill_about">Skills</string>
    <string name="experience_about">Experience</string>
    <string name="email">Email</string>
    <string name="linkedin">LinkedIn</string>
    <string name="nox">NOx</string>
    <string name="nh3">NH3</string>
    <string name="co2">CO2</string>
    <string name="pm2_5">PM2.5</string>
    <string name="pm10">PM10</string>
    <string name="timestamp">Timestamp</string>
    <string name="setting">Setting</string>
    <string name="menu_setting">Settings</string>

    <string name="sensor_data_format">NOx: %1$.2f\nNH3: %2$.2f\nCO2: %3$.2f\nTimestamp: %4$s</string>
    <string name="aqi_icon">AQI Icon</string>
    <string name="aqi_info">AQI Info</string>
    <string name="g_m"> µg/m³</string>
    <string name="ppm"> ppm</string>
</resources>