<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.skripsi.airquality.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_sensors"
        android:name="com.skripsi.airquality.ui.sensors.SensorsFragment"
        android:label="@string/menu_sensor"
        tools:layout="@layout/fragment_sensors" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.skripsi.airquality.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.skripsi.airquality.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.skripsi.airquality.ui.setting.SettingsFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_settings" />
</navigation>