<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/card_background"
        android:padding="8dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/text_pm25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pm2_5"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_pm10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pm10"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_nox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nox"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_nh3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nh3"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_co2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/co2"
            android:textColor="#000000"
            android:textSize="14sp" />

<!--        <TextView-->
<!--            android:id="@+id/text_pm25"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:textColor="#000000"-->
<!--            android:textSize="14sp" />-->

<!--        <TextView-->
<!--            android:id="@+id/text_pm10"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:textColor="#000000"-->
<!--            android:textSize="14sp" />-->

        <TextView
            android:id="@+id/text_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timestamp"
            android:textColor="#000000"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
