<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- ImageView for the sensor icon -->
    <ImageView
        android:id="@+id/ivSensorIcon"
        android:layout_width="203dp"
        android:layout_height="220dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profile_image_desc"
        android:src="@drawable/ic_avatar_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TextView for the sensor name -->
    <TextView
        android:id="@+id/tvSensorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sensor_name"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSensorIcon"
        app:layout_constraintHorizontal_bias="0.5" /> <!-- Center text horizontally -->

    <!-- TextView for the sensor description -->
    <TextView
        android:id="@+id/tvSensorDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:text="@string/sensor_description"
        android:textColor="#000000"
        android:textSize="16sp"
        android:gravity="fill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSensorName"
        app:layout_constraintHorizontal_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
